--- a/app/src/main/res/menu/bottom_navigation.xml
+++ b/app/src/main/res/menu/bottom_navigation.xml
@@ -7,6 +7,10 @@
         android:icon="@drawable/ic_fluent_book_24_regular"
         android:title="Phrases" />
     <item
+        android:id="@+id/bnav_search"
+        android:icon="@drawable/ic_fluent_search_24_regular"
+        android:title="Search" />
+    <item
         android:id="@+id/bnav_quiz"
         android:icon="@drawable/ic_fluent_quiz_new_24_regular"
         android:title="Quizes" />
