--- a/app/src/main/res/layout/fragment_add_phrase.xml
+++ b/app/src/main/res/layout/fragment_add_phrase.xml
@@ -6,7 +6,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="16dp"
-    android:layout_marginBottom="8dp"
     android:elevation="24dp"
     android:orientation="vertical">
 
@@ -42,7 +41,7 @@
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/editTextOriginLang"
-        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+        style="@style/OutlinedBox"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
@@ -71,8 +70,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editTextOriginLang"
         app:startIconDrawable="@drawable/ic__f1ee_1f1f9"
-
-        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
+        style="@style/OutlinedBox">
 
         <com.google.android.material.textfield.TextInputEditText
             android:layout_width="match_parent"
@@ -84,6 +82,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
+        android:layout_marginBottom="24dp"
         android:text="Save"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editTextDestLang" />
