--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.coordinatorlayout.widget.CoordinatorLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
@@ -13,7 +13,9 @@
         android:layout_height="wrap_content"
         app:liftOnScroll="true">
 
-        <include android:id="@+id/toolbar" layout="@layout/toolbar_hero" />
+        <include
+            android:id="@+id/toolbar"
+            layout="@layout/toolbar_hero" />
 
     </com.google.android.material.appbar.AppBarLayout>
 
