--- a/app/src/main/res/navigation/navigation_graph.xml
+++ b/app/src/main/res/navigation/navigation_graph.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/bnav_phrases"
-        android:name="uk.ac.aber.dcs.cs31620.phrasepad.PhrasesFragment"
+        android:name="uk.ac.aber.dcs.cs31620.phrasepad.ui.phrases.PhrasesFragment"
         android:label="fragment_phrases"
         tools:layout="@layout/fragment_phrases" />
 </navigation>
