--- a/app/src/main/res/layout/fragment_add_phrase.xml
+++ b/app/src/main/res/layout/fragment_add_phrase.xml
@@ -7,13 +7,15 @@
     android:layout_height="match_parent"
     android:padding="16dp"
     android:elevation="24dp"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    style="@style/CustomBottomSheet">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/header"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
         <TextView
@@ -31,27 +33,25 @@
             android:id="@+id/imageButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:background="@null"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/ic_fluent_dismiss_24_regular"
-            android:background="@null" />
+            app:srcCompat="@drawable/ic_fluent_dismiss_24_regular" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/editTextOriginLang"
-        style="@style/OutlinedBox"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="8dp"
         android:ems="10"
-        android:hint="Source Language"
         android:inputType="textPersonName"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/header"
-        app:startIconDrawable="@drawable/ic__f1ee_1f1f9">
+        app:startIconDrawable="@drawable/it">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/textInputOriginLang"
@@ -64,14 +64,13 @@
         android:id="@+id/editTextDestLang"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="8dp"
         android:ems="10"
         android:inputType="textPersonName"
-        android:hint="Destination Language"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextSearch"
-        app:startIconDrawable="@drawable/ic__f1ee_1f1f9"
-        style="@style/OutlinedBox">
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/editTextOriginLang"
+        app:startIconDrawable="@drawable/it">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/textInputDestLang"
@@ -84,7 +83,7 @@
         android:id="@+id/saveButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="8dp"
         android:text="Save"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editTextDestLang" />
