--- a/app/src/main/res/layout/toolbar_hero.xml
+++ b/app/src/main/res/layout/toolbar_hero.xml
@@ -4,16 +4,15 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/toolbar"
     android:layout_width="match_parent"
-    android:layout_height="56dp"
-    android:theme="@style/Base_ToolbarStyle"
-    android:orientation="vertical"
+    android:layout_height="?attr/actionBarSize"
     app:layout_scrollFlags="scroll|enterAlways"
-    app:menu="@menu/toolbar">
+    app:menu="@menu/toolbar"
+    style="@style/Widget.MaterialComponents.Toolbar.Primary">
 
     <ImageView
+        android:id="@+id/lang_flag"
         android:layout_width="24dp"
         android:layout_height="24dp"
-        android:src="@drawable/ic__f1ee_1f1f9"
         android:layout_marginEnd="12dp"/>
 
     <TextView
@@ -21,8 +20,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/app_name"
-        android:fontFamily="@font/merriweather_bold"
-        android:textSize="20sp"
-        android:textColor="@color/secondaryTextColor"/>
+        style="@style/TextAppearance.App.Headline6"
+        android:textSize="20sp"/>
 
 </com.google.android.material.appbar.MaterialToolbar>
