--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -1,17 +1,59 @@
 <resources>
-    <!-- Reply Preference -->
-    <string-array name="reply_entries">
-        <item>Reply</item>
-        <item>Reply to all</item>
-    </string-array>
-
-    <string-array name="reply_values">
-        <item>reply</item>
-        <item>reply_all</item>
-    </string-array>
-
+    <!--Language preferences-->
     <string-array name="languages">
+        <item>官话</item>
+        <item>Español</item>
         <item>English</item>
-        <item>Welsh</item>
+        <item>Cymraeg</item>
+        <item>हिन्दी</item>
+        <item>বাংলা</item>
+        <item>Português</item>
+        <item>Pусский</item>
+        <item>日本語</item>
+        <item>ਪੰਜਾਬੀ</item>
+        <item>मराठी</item>
+        <item>తెలుగు</item>
+        <item>Türkçe</item>
+        <item>한국어</item>
+        <item>Français</item>
+        <item>Deutsch</item>
+        <item>Tiếng Việt</item>
+        <item>தமிழ்</item>
+        <item>اُردُو</item>
+        <item>Italiano</item>
+    </string-array>
+    <string-array name="languages_codes">
+        <item>zh</item>
+        <item>es</item>
+        <item>en</item>
+        <item>cy</item>
+        <item>hi</item>
+        <item>bn</item>
+        <item>pt</item>
+        <item>ru</item>
+        <item>jp</item>
+        <item>pa</item>
+        <item>mr</item>
+        <item>te</item>
+        <item>tr</item>
+        <item>ko</item>
+        <item>fr</item>
+        <item>de</item>
+        <item>vi</item>
+        <item>ta</item>
+        <item>ur</item>
+        <item>it</item>
+    </string-array>
+
+    <!-- Theme preferences -->
+    <string-array name="themes">
+        <item>System default</item>
+        <item>Light</item>
+        <item>Dark</item>
+    </string-array>
+    <string-array name="themes_values">
+        <item>0</item>
+        <item>1</item>
+        <item>2</item>
     </string-array>
 </resources>
