--- a/app/src/main/res/values-night/styles.xml
+++ b/app/src/main/res/values-night/styles.xml
@@ -1,14 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <style name="Widget.App.Toolbar" parent="Widget.MaterialComponents.Toolbar.Primary">
-        <item name="materialThemeOverlay">@style/ThemeOverlay.App.Toolbar</item>
         <item name="titleTextAppearance">@style/TextAppearance.App.Headline6</item>
-        <item name="subtitleTextAppearance">@style/TextAppearance.App.Subtitle1</item>
     </style>
 
-    <style name="ThemeOverlay.App.Toolbar" parent="">
-        <item name="colorPrimary">@color/black</item>
-        <item name="colorPrimaryVariant">@color/black</item>
-        <item name="colorOnPrimary">@color/white</item>
+    <style name="PhrasePad.BottomNavigation" parent="Widget.MaterialComponents.BottomNavigationView">
+        <item name="android:layout_gravity">bottom</item>
+        <item name="labelVisibilityMode">selected</item>
     </style>
 </resources>
