--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,24 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources xmlns:tools="http://schemas.android.com/tools">
     <style name="Theme.PhrasePad" parent="Theme.MaterialComponents.DayNight.NoActionBar">
-        <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/green_light</item>
-        <item name="colorPrimaryVariant">@color/green</item>
+        <!-- Primary brand color -->
+        <item name="colorPrimary">@color/secondary_200</item>
+        <item name="colorPrimaryVariant">@color/secondary_400</item>
         <item name="colorOnPrimary">@color/black</item>
-        <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/blue_light</item>
-        <item name="colorSecondaryVariant">@color/blue_light</item>
+        <!-- Secondary brand color -->
+        <item name="colorSecondary">@color/primary_200</item>
+        <item name="colorSecondaryVariant">@color/primary_400</item>
         <item name="colorOnSecondary">@color/black</item>
-        <!-- Status bar color. -->
+
+        <!-- Status bar -->
         <item name="android:statusBarColor">@color/black</item>
-        <item name="android:navigationBarColor">@color/green_light</item>
         <item name="android:windowLightStatusBar" tools:targetApi="m">false</item>
+
+        <!-- Navigation bar -->
+        <item name="android:navigationBarColor">?attr/colorPrimary</item>
         <item name="android:windowLightNavigationBar" tools:targetApi="27">false</item>
 
-        <item name="textAppearanceHeadline6">@style/TextAppearance.App.Headline6</item>
-
-        <item name="toolbarStyle">@style/Widget.App.Toolbar</item>
-
-        <item name="bottomNavigationStyle">@style/Widget.MaterialComponents.BottomNavigationView.Colored</item>
+        <item name="toolbarStyle">@style/PhrasePad.Toolbar</item>
+        <item name="textInputStyle">@style/PhrasePad.TextInputLayout</item>
+        <item name="bottomNavigationStyle">@style/PhrasePad.BottomNavigation</item>
+        <item name="bottomSheetDialogTheme">@style/PhrasePad.BottomSheetDialog</item>
     </style>
 </resources>
