--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,10 +2,26 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="green">#1B5E20</color>
-    <color name="green_dark">#003300</color>
-    <color name="green_light">#A5D6A7</color>
-    <color name="blue">#0288D1</color>
-    <color name="blue_dark">#005B9F</color>
-    <color name="blue_light">#81D4FA</color>
+
+    <color name="primary_900">#FF263238</color>
+    <color name="primary_800">#FF37474F</color>
+    <color name="primary_700">#FF455A64</color>
+    <color name="primary_600">#FF546E7A</color>
+    <color name="primary_500">#FF607D8B</color>
+    <color name="primary_400">#FF78909C</color>
+    <color name="primary_300">#FF90A4AE</color>
+    <color name="primary_200">#FFB0BEC5</color>
+    <color name="primary_100">#FFCFD8DC</color>
+    <color name="primary_50">#FFECEFF1</color>
+
+    <color name="secondary_900">#FF005457</color>
+    <color name="secondary_800">#FF017374</color>
+    <color name="secondary_700">#FF018786</color>
+    <color name="secondary_600">#FF019592</color>
+    <color name="secondary_500">#FF01A299</color>
+    <color name="secondary_400">#FF00B3A6</color>
+    <color name="secondary_300">#FF00C4B4</color>
+    <color name="secondary_200">#FF03DAC5</color>
+    <color name="secondary_100">#FF70EFDE</color>
+    <color name="secondary_50">#FFC8FFF4</color>
 </resources>
