--- a/app/src/main/res/layout/fragment_phrases.xml
+++ b/app/src/main/res/layout/fragment_phrases.xml
@@ -11,5 +11,14 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:scrollbars="vertical" />
+    
+    <TextView
+        android:id="@+id/phrases_empty"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center"
+        android:visibility="gone"
+        android:text="Empty list :(" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
