--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,7 +14,7 @@
         app:liftOnScroll="true">
 
         <include
-            android:id="@+id/toolbar2"
+            android:id="@+id/toolbar"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             layout="@layout/toolbar_hero" />
@@ -42,7 +42,7 @@
         android:layout_marginBottom="72dp"
         android:clickable="true"
         android:onClick="showAddPhraseFragment"
-        android:text="Add Phrase"
+        android:text="@string/add_phrase"
         app:icon="@drawable/ic_fluent_add_24_regular" />
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
