--- a/app/src/main/res/layout/fragment_add_phrase.xml
+++ b/app/src/main/res/layout/fragment_add_phrase.xml
@@ -8,7 +8,8 @@
     android:padding="16dp"
     android:elevation="24dp"
     android:orientation="vertical"
-    android:id="@+id/add_phrase_sheet">
+    android:id="@+id/add_phrase_sheet"
+    android:clipToPadding="false">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/header"
@@ -31,6 +32,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
+        <!--
         <ImageButton
             android:id="@+id/dismissButton"
             android:layout_width="wrap_content"
@@ -39,54 +41,83 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/ic_fluent_dismiss_24_regular" />
+            app:srcCompat="@drawable/ic_fluent_dismiss_24_regular" /> -->
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/editTextOriginLang"
+    <LinearLayout
+        android:id="@+id/source"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
-        android:ems="10"
-        android:inputType="textNoSuggestions"
-        app:endIconDrawable="@drawable/ic_fluent_dismiss_24_regular"
-        app:endIconMode="clear_text"
-        app:errorEnabled="true"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/header"
-        style="@style/PhrasePad.TextInputLayout">
+        app:layout_constraintTop_toBottomOf="@+id/header">
 
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/textInputOriginLang"
+        <ImageView
+            android:id="@+id/sourceLangFlag"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:layout_marginEnd="12dp"
+            android:layout_gravity="center" />
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/editTextOriginLang"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:layout_marginTop="24dp"
+            android:ems="10"
+            android:inputType="textNoSuggestions"
+            app:endIconDrawable="@drawable/ic_fluent_dismiss_24_regular"
+            app:endIconMode="clear_text"
+            app:errorEnabled="true"
+            style="@style/PhrasePad.TextInputLayout">
 
-    </com.google.android.material.textfield.TextInputLayout>
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/textInputOriginLang"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
 
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/editTextDestLang"
+        </com.google.android.material.textfield.TextInputLayout>
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/dest"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:ems="10"
-        android:inputType="textNoSuggestions"
-        app:endIconDrawable="@drawable/ic_fluent_dismiss_24_regular"
-        app:endIconMode="clear_text"
-        app:errorEnabled="true"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/header"
+        app:layout_constraintTop_toBottomOf="@+id/source"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextOriginLang"
-        app:startIconDrawable="@drawable/it"
-        style="@style/PhrasePad.TextInputLayout">
+        app:layout_constraintEnd_toEndOf="parent"
+        tools:layout_editor_absoluteY="16dp">
 
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/textInputDestLang"
+        <ImageView
+            android:id="@+id/destLangFlag"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:layout_marginEnd="12dp"
+            android:layout_gravity="center" />
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/editTextDestLang"
+            style="@style/PhrasePad.TextInputLayout"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:ems="10"
+            android:inputType="textNoSuggestions"
+            app:endIconDrawable="@drawable/ic_fluent_dismiss_24_regular"
+            app:endIconMode="clear_text"
+            app:errorEnabled="true">
 
-    </com.google.android.material.textfield.TextInputLayout>
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/textInputDestLang"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
+        </com.google.android.material.textfield.TextInputLayout>
+
+    </LinearLayout>
 
     <Button
         android:id="@+id/saveButton"
@@ -95,6 +126,7 @@
         android:layout_marginTop="8dp"
         android:text="@string/save"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextDestLang" />
+        app:layout_constraintTop_toBottomOf="@+id/dest"
+        style="@style/Widget.MaterialComponents.Button" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
