--- a/app/src/main/res/layout/fragment_add_phrase.xml
+++ b/app/src/main/res/layout/fragment_add_phrase.xml
@@ -49,6 +49,7 @@
         android:id="@+id/source"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/header">
@@ -57,15 +58,14 @@
             android:id="@+id/sourceLangFlag"
             android:layout_width="24dp"
             android:layout_height="24dp"
-            android:layout_marginEnd="12dp"
+            android:layout_marginEnd="16dp"
+            android:layout_marginBottom="4dp"
             android:layout_gravity="center" />
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/editTextOriginLang"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="24dp"
-            android:ems="10"
             android:inputType="textNoSuggestions"
             app:endIconDrawable="@drawable/ic_fluent_dismiss_24_regular"
             app:endIconMode="clear_text"
@@ -95,7 +95,8 @@
             android:id="@+id/destLangFlag"
             android:layout_width="24dp"
             android:layout_height="24dp"
-            android:layout_marginEnd="12dp"
+            android:layout_marginEnd="16dp"
+            android:layout_marginBottom="4dp"
             android:layout_gravity="center" />
 
         <com.google.android.material.textfield.TextInputLayout
@@ -103,8 +104,6 @@
             style="@style/PhrasePad.TextInputLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:ems="10"
             android:inputType="textNoSuggestions"
             app:endIconDrawable="@drawable/ic_fluent_dismiss_24_regular"
             app:endIconMode="clear_text"
