--- a/app/src/main/res/layout/settings_activity.xml
+++ b/app/src/main/res/layout/settings_activity.xml
@@ -13,8 +13,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_scrollFlags="scroll|enterAlways"
-        app:navigationIcon="@drawable/ic_fluent_arrow_left_24_regular"
-        app:title="Settings"
+        app:title="@string/title_activity_settings"
         style="@style/PhrasePad.Toolbar">
 
     </com.google.android.material.appbar.MaterialToolbar>
