--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -47,9 +47,9 @@
 
     <!-- Theme preferences -->
     <string-array name="themes">
-        <item>System default</item>
-        <item>Light</item>
-        <item>Dark</item>
+        <item>@string/theme_sys_default</item>
+        <item>@string/theme_light</item>
+        <item>@string/theme_dark</item>
     </string-array>
     <string-array name="themes_values">
         <item>0</item>
