Add inital setup and more extra features

--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -31,7 +31,7 @@
         <item>bn</item>
         <item>pt</item>
         <item>ru</item>
-        <item>jp</item>
+        <item>ja</item>
         <item>pa</item>
         <item>mr</item>
         <item>te</item>
