--- a/app/src/main/res/layout/fragment_phrases.xml
+++ b/app/src/main/res/layout/fragment_phrases.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
+<androidx.swiperefreshlayout.widget.SwipeRefreshLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/phrasesListSwipeRefresh"
     tools:context=".ui.phrases.PhrasesFragment">
 
     <androidx.recyclerview.widget.RecyclerView
@@ -21,4 +22,4 @@
         android:text="Empty list :(" />
 
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
