--- a/app/src/main/res/layout/fragment_quiz_four_choices.xml
+++ b/app/src/main/res/layout/fragment_quiz_four_choices.xml
@@ -4,25 +4,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.quiz.QuizFragment"
-    android:id="@+id/quizFragment">
+    tools:context=".ui.quiz.QuizFourChoicesFragment">
 
     <!-- TODO: Update blank fragment layout -->
-    <Button
-        android:id="@+id/buttonNewFrag"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="I will give you a new fragment"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
     <TextView
-        android:id="@+id/text3"
+        android:id="@+id/text1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
         android:text="@string/hello_blank_fragment"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
