Add notifications and fix data for quiz

--- a/app/src/main/res/layout/fragment_quiz.xml
+++ b/app/src/main/res/layout/fragment_quiz.xml
@@ -7,12 +7,12 @@
     tools:context=".ui.quiz.QuizFragment"
     android:id="@+id/quizFragment">
 
-    <!-- TODO: Update blank fragment layout
+    <!-- TODO: Update blank fragment layout -->
     <Button
         android:id="@+id/buttonNewFrag"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="I will give you a new fragment"
+        android:text="Run quiz helper"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -23,6 +23,6 @@
         android:layout_marginTop="16dp"
         android:text="@string/hello_blank_fragment"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/buttonNewFrag" /> -->
+        app:layout_constraintTop_toBottomOf="@+id/buttonNewFrag" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
