--- a/app/src/main/res/layout/phrase_list_item.xml
+++ b/app/src/main/res/layout/phrase_list_item.xml
@@ -7,7 +7,8 @@
     android:layout_height="wrap_content"
     android:paddingTop="16dp"
     android:paddingBottom="16dp"
-    android:shrinkColumns="1">
+    android:shrinkColumns="1"
+    android:background="?android:attr/selectableItemBackground">
 
     <LinearLayout
         android:layout_width="match_parent"
