--- a/app/src/main/res/menu/bottom_navigation.xml
+++ b/app/src/main/res/menu/bottom_navigation.xml
@@ -1,15 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:android="http://schemas.android.com/apk/res/android">
-
+<menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:id="@+id/bnav_phrases"
         android:icon="@drawable/bnav_phrases_selector"
         android:title="@string/phrases" />
-    <item
-        android:id="@+id/bnav_search"
-        android:icon="@drawable/bnav_search_selector"
-        android:title="@string/search" />
     <item
         android:id="@+id/bnav_quiz"
         android:icon="@drawable/bnav_quiz_selector"
