--- a/app/src/main/res/drawable/quiz_cell_background.xml
+++ b/app/src/main/res/drawable/quiz_cell_background.xml
@@ -2,6 +2,6 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <stroke
         android:width="1dp"
-        android:color="?attr/colorOnSurface" />
+        android:color="@color/material_on_surface_stroke" />
     <corners android:radius="8dp" />
 </shape>
