--- a/app/src/main/res/layout/quiz_list_item.xml
+++ b/app/src/main/res/layout/quiz_list_item.xml
@@ -23,9 +23,9 @@
             android:id="@+id/phraseToTest"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="TEST"
             android:textAlignment="center"
-            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6" />
+            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
+            android:textColor="?attr/colorPrimary"/>
 
     </FrameLayout>
 
